--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div>
+    <div class="wrapper">
         Bem vindo à minha página
+        <div class="esquerda">
+            Coluna esquerda
+        </div>
+        <div class="direita">
+            Coluna a direita
+        </div>
     </div>
 </body>
 </html>
