alterações div esquerdo e direito

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" media="" href="css/mobile.css">
+
+    <link rel="stylesheet" media="screen and (max-width: 500px)" href="css/mobile.css">
 </head>
 <body>
     <div class="wrapper">
-        Bem vindo à minha página
+       
         <div class="esquerda">
             Coluna esquerda
         </div>
