--- a/index.html
+++ b/index.html
@@ -17,7 +17,25 @@
             Coluna esquerda
         </div>
         <div class="direita">
-            Coluna a direita
+            <form>
+                <ul>
+                    <li>
+                        User: <input type="text" name="user_registo">
+                    </li>
+                    <li>
+                        Password: <input type="text" name="Password_registo">
+                    </li>
+                    <li>
+                        Telefone: <input type="text" name="Telefone_registo">
+                    </li>
+                    <li>
+                        Data de nascimento: <input type="text" name="Data_registo">
+                    </li>
+                    <li>
+                        <button>Registo</button>
+                    </li>
+                </ul>
+            </form>
         </div>
     </div>
 </body>
