alteracao campo user

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
             <form>
                 <ul>
                     <li>
-                        user: <input type="text" name="login">
+                        User: <input type="text" name="login">
                     </li>
                     <li>
                         Pass: <input type="password" name="Pass">
                     </li>
+                    
                 </ul>
             </form>
         </div>
