--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                     </li>
                 </ul>
             </form>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta recusandae iusto, vitae ad, veniam totam sit voluptas, tenetur fugit quidem reprehenderit. Aspernatur modi sapiente animi, dolorem illo suscipit inventore accusamus?
+            </p>
         </div>
     </div>
 </body>
