--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="css/mobile.css">
 
     <!-- <link rel="stylesheet" media="screen and (max-width: 500px)" href="css/mobile.css"> -->
+    <meta property=”og:type” content=”article“/>
+
+    <script src="main.js">
+        function teste(){
+            alert("olá");
+        }
+    </script>
+
 </head>
 <body>
     <div class="wrapper">
